--- a/scraping/templates/index.html
+++ b/scraping/templates/index.html
@@ -5,6 +5,7 @@
 <body>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <script src="{{url_for('static', filename='js/request.js')}}"></script>
     <link rel="stylesheet" href="../static/css/styles.css">
 
     <div class= "d-flex flex-column align-items-center description">
@@ -23,35 +24,7 @@
     </div>
 
     <script>
-      const f = document.getElementById('form');
-      const q = document.getElementById('query');
-      const url = 'https://deck-scraper.herokuapp.com/names/';
-      var tree = document.createDocumentFragment();
 
-      async function submitted(event) {
-
-        event.preventDefault()
-        const response = await fetch(url + q.value);
-
-        const responsedata = await response.json();
-        const cleaneddata = responsedata.values;
-        console.log(cleaneddata);
-
-
-        for(x in cleaneddata){
-
-
-            var div = document.createElement("div");
-            div.setAttribute("id", cleaneddata[x].name);
-            div.appendChild(document.createTextNode(cleaneddata[x].num + "x "));
-            div.appendChild(document.createTextNode(cleaneddata[x].name));
-            tree.append(div);
-        }
-        document.getElementById("main").appendChild(tree);
-        const newdata = JSON.stringify(cleaneddata);
-      }
-
-      f.addEventListener('submit', submitted);
     </script>
 
 
