--- a/scraping/templates/index.html
+++ b/scraping/templates/index.html
@@ -14,6 +14,14 @@
             <input type="search" id="query" name="q" placeholder="Enter a url...">
             <button>Search</button>
         </form>
+
+
+        <form action = "/upload-file" method = "POST" id = "fileupload" enctype="text/plain">
+          <input type="file" id="myFile" name="text">
+          <input type="submit">
+        </form>
+
+
         <p>This site takes a url for Magic: The Gathering deck and returns the associated decklist along with other relevant data.</p>
         <p>Example: https://www.mtggoldfish.com/archetype/modern-death-s-shadow#paper</p>
         <p>Currently supported sites mtggoldfish.com</p>
@@ -23,10 +31,80 @@
             <p id= "main"></p>
     </div>
 
+<script>
+const f = document.getElementById('form');
+const q = document.getElementById('query');
+const namesUrl = 'https://deck-scraper.herokuapp.com/names/';
+const scrapeUrl = 'https://deck-scraper.herokuapp.com/scrape/';
+var tree = document.createDocumentFragment();
+
+async function submitted(event)
+{
+    const myNode = document.getElementById("main");
+
+    while (myNode.firstChild)
+    {
+    myNode.removeChild(myNode.lastChild);
+    }
+
+
+    event.preventDefault();
+
+    const response2 = await fetch(scrapeUrl + q.value);
+    const responsedata2 = await response2.json();
+
+    const cleaneddata2 = responsedata2.data;
+
+    console.log(cleaneddata2);
+
+    for(x in cleaneddata2)
+    {
+        try
+        {
+        console.log(cleaneddata2[x].image_uris.png);
+        }
+
+        catch(err)
+        {
+        for(y in cleaneddata2[x]){
+        console.log(y.card_faces);
+        }
+        }
+
+    }
+
+
+
+    const response = await fetch(namesUrl + q.value);
+
+    const responsedata = await response.json();
+    const cleaneddata = responsedata.values;
+    console.log(cleaneddata);
+
+    for(x in cleaneddata)
+    {
+
+        var div = document.createElement("div");
+        div.setAttribute("id", cleaneddata[x].name);
+
+        div.appendChild(document.createTextNode(cleaneddata[x].num + "x "));
+        div.appendChild(document.createTextNode(cleaneddata[x].name));
+        tree.append(div);
+    }
+    document.getElementById("main").appendChild(tree);
+
+
+    const newdata = JSON.stringify(cleaneddata);
+}
+f.addEventListener('submit', submitted);
+</script>
+
 
 
 </body>
 
+
+<script src="{{url_for('static', filename='js/request.js')}}"></script>
 <script src="{{url_for('static', filename='js/request.js')}}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
