--- a/scraping/templates/index.html
+++ b/scraping/templates/index.html
@@ -16,7 +16,7 @@
         </form>
 
 
-        <form action = "/upload-file" method = "POST" id = "fileupload" enctype="text/plain">
+        <form action = "/" method = "POST" id = "fileupload" enctype="text/plain">
           <input type="file" id="myFile" name="text">
           <input type="submit">
         </form>
